Revision history for Perl extension JavaScript::Minifier::XS.

{{$NEXT}}
    - POD cleanups; spelling, SYNOPSIS

0.12      2020-12-28 08:31:31-08:00 America/Vancouver
    - Switch to GitHub Actions, from Travis-CI.
    - Add META links to GitHub repository and issue tracker
    - Switch to Dist::Zilla
    - Bump minimum required Perl to 5.8.1
    - RT #130347; handle ES6 template literals.
      Thanks to Robert Rothenberg.

0.11        Tue Jan 27 16:50 PST 2015
    - RT #58416; don't segfault when trying to minify non-javascript

0.10        Mon Jan 26 22:46 PST 2015
    - RT #64948; allow builds on older versions of Perl.
      Thanks to Michael Robinton and Ruslan Zakirov.
    - Lowered minimum Perl version to v5.6.0, as detected by
      Perl::MinimumVersion.
    - RT #51008; allow for minification of JS code that returns regexps from
      functions.
      Thanks to James Barton, Robert Krimen, and Randy Stauner.
    - Added "xt/test-compile.t" to test minification against a wider range of
      JS.  While not a 100% guarantee that the JS still works, it does provide
      a wider range of JS to test against.

0.09        Tue Nov  2 22:12 PDT 2010
    - Bump required Perl version to 5.8.8; oldest release w/Newxz() available.

0.08        Wed Jul 21 21:23 PDT 2010
    - use Newxz/Safefree for memory management, instead of malloc/free.  Thanks
      to Kenichi Ishigaki for his patch to CSS-Minifier-XS that prompted this.

0.07        Fri Apr 23 23:44 PDT 2010
    - switch to Git

0.06        Thu Aug  6, 22:08 PDT 2009
    - fix invalid "L<text|scheme:...>" POD sequences

0.05        Wed Jul 16, 23:35 PDT 2008
    - don't segfault w/older Perls if we minify right down to nothing.
      (similar behaviour as described for CSS::Minifier::XS in RT #36557)

0.04        Wed May 28, 21:58 PDT 2008
    - rebuild packages; wrong version number in META.yml

0.03        Wed May 28, 14:46 PDT 2008