@@ -3,44 +3,9 @@ author           = Graham TerMarsch <cpan@howlingfrog.com>
 license          = Perl_5
 copyright_holder = Graham TerMarsch
 
-[@Filter]
--bundle = @Basic
--remove = Readme
--remove = GatherDir
+; Skip files in "js/" sub-directory, when looking for Test Files
+[FileFinder::ByName / :TestFiles]
+dir  = t
+skip = js
 
-[GatherDir]
-exclude_filename = dist.ini
-
-[ReadmeAnyFromPod / ReadmeGfmInRoot]
-[ReadmeAnyFromPod / ReadmeInDist]
-[Prereqs::FromCPANfile]
-
-[PodSyntaxTests]
-[PodCoverageTests]
-[Test::MinimumVersion]
-
-[MetaResources]
-bugtracker.web = https://github.com/bleargh45/JavaScript-Minifier-XS/issues
-repository.web = https://github.com/bleargh45/JavaScript-Minifier-XS
-repository.url = https://github.com/bleargh45/JavaScript-Minifier-XS.git
-repository.type = git
-
-[MetaJSON]
-
-[RewriteVersion]
-
-[EnsureChangesHasContent]
-[NextRelease]
-
-; Commit updates to "Changes"
-[Git::Commit / Commit_Changes]
-commit_msg = Release v%V
-
-; Tag the release
-[Git::Tag]
-
-; Bump version, and commit that
-[BumpVersionAfterRelease]
-[Git::Commit / Commit_Next_Version]
-allow_dirty_match = ^lib/
-commit_msg = Version bump.
+[@Author::GTERMARS]
